--- a/GameData/Sigma/Dimensions/Configs/ReDimension/resizeClouds.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/resizeClouds.cfg
@@ -25,9 +25,25 @@
 	@OBJECT:HAS[~customResize[>0]]
 	{
 		@altitude *= #$@SigmaDimensions/Resize$
+		@layerVolume:HAS[#size[*,*]]
+		{
+			@size[0] *= #$@SigmaDimensions/Atmosphere$
+		}
+		@layerVolume:HAS[#area[*,*]]
+		{
+			@area[0] *= #$@SigmaDimensions/Atmosphere$
+		}
 	}
 	@OBJECT:HAS[#customResize[>0]]
 	{
 		@altitude *= #$customResize$
+		@layerVolume:HAS[#size[*,*]]
+		{
+			@size[0] *= #$../customResize$
+		}
+		@layerVolume:HAS[#area[*,*]]
+		{
+			@area[0] *= #$../customResize$
+		}
 	}
 }
