--- a/GameData/Sigma/Dimensions/Configs/ReDimension/advancedSettings.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/advancedSettings.cfg
@@ -34,26 +34,26 @@
 {
 	%resizeScatter = 1
 }
-@SigmaDimensions:HAS[~SoIsFromRadius[0],~SoIsFromRadius[1]]:AFTER[SigDim]
+@SigmaDimensions:HAS[~CustomSoISize[>0]]:AFTER[SigDim]
 {
-	%SoIsFromRadius = 0
+	%CustomSoISize = 0
 }
-@SigmaDimensions:HAS[~RingsFromRadius[0],~RingsFromRadius[1]]:AFTER[SigDim]
+@SigmaDimensions:HAS[~CustomRingSize[>0]]:AFTER[SigDim]
 {
-	%RingsFromRadius = 0
+	%CustomRingSize = 0
 }
 
 // Create PlanetDimensions parameter
 
 @SigmaDimensions:HAS[~PlanetDimensions[*]]:AFTER[SigDim]
 {
-	%PlanetDimensions = #$Resize$,$Rescale$,$Atmosphere$,$dayLengthMultiplier$,$geeASLmultiplier$,$landscape$,$atmoVisualEffect$,$resizeScatter$,$SoIsFromRadius$,$RingsFromRadius$
+	%PlanetDimensions = #$Resize$,$Rescale$,$Atmosphere$,$dayLengthMultiplier$,$geeASLmultiplier$,$landscape$,$atmoVisualEffect$,$resizeScatter$,$CustomSoISize$,$CustomRingSize$
 }
 @Kopernicus:AFTER[SigDim]
 {
 	@Body:HAS[~PlanetDimensions[*]]
 	{
-		%PlanetDimensions = Resize,Rescale,Atmosphere,dayLengthMultiplier,geeASLmultiplier,landscape,atmoVisualEffect,resizeScatter,SoIsFromRadius,RingsFromRadius
+		%PlanetDimensions = Resize,Rescale,Atmosphere,dayLengthMultiplier,geeASLmultiplier,landscape,atmoVisualEffect,resizeScatter,CustomSoISize,CustomRingSize
 	}
 }
 
@@ -93,11 +93,11 @@
 	{
 		@PlanetDimensions[7] = #$@SigmaDimensions/PlanetDimensions[7]$
 	}
-	@Body:HAS[#PlanetDimensions[*,SoIsFromRadius,*]]
+	@Body:HAS[#PlanetDimensions[*,CustomSoISize,*]]
 	{
 		@PlanetDimensions[8] = #$@SigmaDimensions/PlanetDimensions[8]$
 	}
-	@Body:HAS[#PlanetDimensions[*,RingsFromRadius]]
+	@Body:HAS[#PlanetDimensions[*,CustomRingSize]]
 	{
 		@PlanetDimensions[9] = #$@SigmaDimensions/PlanetDimensions[9]$
 	}
@@ -107,10 +107,6 @@
 
 @Kopernicus:AFTER[SigDim]
 {
-	@Body:HAS[#PlanetDimensions[*,*,*,*,*,*,*,*,1,*]]
-	{
-		@PlanetDimensions[8] = #$PlanetDimensions[0]$
-	}
 	@Body:HAS[#PlanetDimensions[*,*,*,*,*,*,*,*,0,*]]
 	{
 		@PlanetDimensions[8] = #$PlanetDimensions[1]$
