--- a/GameData/Sigma/Dimensions/Settings.cfg
+++ b/GameData/Sigma/Dimensions/Settings.cfg
@@ -18,6 +18,6 @@ SigmaDimensions
 	landscape = 1
 	atmoVisualEffect = 1
 	resizeScatter = 1
-	SoIsFromRadius = 0
-	RingsFromRadius = 0
+	CustomSoISize = 0
+	CustomRingSize = 0
 }
