--- a/GameData/Sigma/Dimensions/Configs/ReDimension/atmoScale.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/atmoScale.cfg
@@ -83,13 +83,11 @@
 			
 			@pressureCurve
 			{
-				@key,* ^= : :,:
-				@key,* ^= :$:,0,0,x:
-				@key,*[0] *= #$../../PlanetDimensions[2]$
-				@key,*[2] /= #$../../PlanetDimensions[2]$
-				@key,*[3] /= #$../../PlanetDimensions[2]$
-				@key,* ^= :,0,0,x$: :
-				@key,* ^= :,: :
+				@key,* ^= :$: 0 0 0 x:
+				@key,*[0, ] *= #$../../PlanetDimensions[2]$
+				@key,*[2, ] /= #$../../PlanetDimensions[2]$
+				@key,*[3, ] /= #$../../PlanetDimensions[2]$
+				@key,* ^= : 0 0 0 x$: :
 			}
 		}
 		@Atmosphere:HAS[~temperatureCurveIsNormalized[True]]
