--- a/GameData/Sigma/Dimensions/Configs/ReDimension/atmoScale.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/atmoScale.cfg
@@ -96,13 +96,11 @@
 			
 			@temperatureCurve
 			{
-				@key,* ^= : :,:
-				@key,* ^= :$:,0,0,x:
-				@key,*[0] *= #$../../PlanetDimensions[2]$
-				@key,*[2] /= #$../../PlanetDimensions[2]$
-				@key,*[3] /= #$../../PlanetDimensions[2]$
-				@key,* ^= :,0,0,x$: :
-				@key,* ^= :,: :
+				@key,* ^= :$: 0 0 0 x:
+				@key,*[0, ] *= #$../../PlanetDimensions[2]$
+				@key,*[2, ] /= #$../../PlanetDimensions[2]$
+				@key,*[3, ] /= #$../../PlanetDimensions[2]$
+				@key,* ^= : 0 0 0 x$: :
 			}
 		}
 		@Atmosphere
@@ -111,13 +109,11 @@
 			
 			@temperatureSunMultCurve
 			{
-				@key,* ^= : :,:
-				@key,* ^= :$:,0,0,x:
-				@key,*[0] *= #$../../PlanetDimensions[2]$
-				@key,*[2] /= #$../../PlanetDimensions[2]$
-				@key,*[3] /= #$../../PlanetDimensions[2]$
-				@key,* ^= :,0,0,x$: :
-				@key,* ^= :,: :
+				@key,* ^= :$: 0 0 0 x:
+				@key,*[0, ] *= #$../../PlanetDimensions[2]$
+				@key,*[2, ] /= #$../../PlanetDimensions[2]$
+				@key,*[3, ] /= #$../../PlanetDimensions[2]$
+				@key,* ^= : 0 0 0 x$: :
 			}
 		}
 	}
