add SigDim2 for more rescaling options

--- a/GameData/Sigma/Dimensions/Configs/ReDimension/advancedSettings.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/advancedSettings.cfg
@@ -105,7 +105,7 @@
 
 // Apply changes needed for advanced settings
 
-@Kopernicus:AFTER[SigDim]
+@Kopernicus:FOR[SigDim2]
 {
 	@Body:HAS[#PlanetDimensions[*,*,*,*,*,*,*,*,0,*]]
 	{
