--- a/GameData/Sigma/Dimensions/Configs/ReDimension/resizeClouds.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/resizeClouds.cfg
@@ -1,26 +1,26 @@
-@PQS_MANAGER:AFTER[SigDim]
+@PQS_MANAGER:FOR[SigDim2]
 {
 	SigmaDimensionsResize = #$@SigmaDimensions/Resize$
 }
-@PQS_MANAGER:HAS[#SigmaDimensionsResize[>1]]:AFTER[SigDim]
+@PQS_MANAGER:HAS[#SigmaDimensionsResize[>1]]:FOR[SigDim2]
 {
 	@OBJECT:HAS[~customResize[>0]]
 	{
 		@deactivateDistance *= #$SigmaDimensions/Resize$
 	}
 }
-@PQS_MANAGER:AFTER[SigDim]
+@PQS_MANAGER:FOR[SigDim2]
 {
 	@OBJECT:HAS[#customResize[>0]]
 	{
 		@deactivateDistance *= #$customResize$
 	}	
 }
-@PQS_MANAGER:AFTER[SigDim]
+@PQS_MANAGER:FOR[SigDim2]
 {
 	!SigmaDimensionsResize = DEL
 }
-@EVE_CLOUDS:AFTER[SigDim]
+@EVE_CLOUDS:FOR[SigDim2]
 {
 	@OBJECT:HAS[~customResize[>0]]
 	{
