--- a/GameData/Sigma/Dimensions/Configs/ReDimension/atmoScale.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/atmoScale.cfg
@@ -49,11 +49,19 @@
 			}
 			@AtmosphereFromGround:HAS[~sunAtmo[True]]
 			{
+				// inner radius
+				@innerRadius -= #$../../Properties/radius$
+				@innerRadius *= #$../../PlanetDimensions[2]$
+				@outerRadius *= #$../../PlanetDimensions[6]$
+				@innerRadius /= #$../../PlanetDimensions[0]$
+				@innerRadius += #$../../Properties/radius$
+				@innerRadius *= #$../../PlanetDimensions[0]$
+				
+				// outer radius
 				@outerRadius -= #$../../Properties/radius$
 				@outerRadius *= #$../../PlanetDimensions[2]$
+				@outerRadius *= #$../../PlanetDimensions[6]$
 				%transformScale = #$outerRadius$
-				@transformScale *= #$../../PlanetDimensions[6]$
-				@innerRadius *= #$../../PlanetDimensions[0]$
 				@outerRadius /= #$../../PlanetDimensions[0]$
 				@outerRadius += #$../../Properties/radius$
 				@outerRadius *= #$../../PlanetDimensions[0]$
