define PlanetMultiplier earlier

--- a/GameData/Sigma/Dimensions/Configs/ReDimension/advancedSettings.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/advancedSettings.cfg
@@ -101,4 +101,8 @@
 	{
 		@PlanetDimensions[9] = #$@SigmaDimensions/PlanetDimensions[9]$
 	}
+	@Body:HAS[~PlanetMultiplier[*]]
+	{
+		PlanetMultiplier = 1,1,1,1,1,1,1,1,1,1
+	}
 }
