--- a/GameData/Sigma/Dimensions/Configs/ReDimension/atmoScale.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/atmoScale.cfg
@@ -52,7 +52,7 @@
 				// inner radius
 				@innerRadius -= #$../../Properties/radius$
 				@innerRadius *= #$../../PlanetDimensions[2]$
-				@outerRadius *= #$../../PlanetDimensions[6]$
+				@innerRadius *= #$../../PlanetDimensions[6]$
 				@innerRadius /= #$../../PlanetDimensions[0]$
 				@innerRadius += #$../../Properties/radius$
 				@innerRadius *= #$../../PlanetDimensions[0]$
