fix for easy addition of new parameters

--- a/GameData/Sigma/Dimensions/Configs/ReDimension/applySettings.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/applySettings.cfg
@@ -4,6 +4,7 @@
 {
 	@Body,*
 	{
+		@PlanetDimensions = #$PlanetDimensions$,1,1,1,1,1,1,1,1,1
 		@PlanetDimensions[0] *= #$PlanetMultiplier[0]$
 		@PlanetDimensions[1] *= #$PlanetMultiplier[1]$
 		@PlanetDimensions[2] *= #$PlanetMultiplier[2]$
@@ -31,35 +32,45 @@
 	}
 	@Body:HAS[#PlanetDimensions[*,*,*,*,*,*,*,0,*,*]]
 	{
-		@PlanetDimensions = #$PlanetDimensions$,1,$PlanetDimensions[0]$
+		// define PlanetDimensions[0] = changeScatterSize
+		// define PlanetDimensions[1] = changeScatterDensity
+		
+		%PlanetDimensions2 = #1,$PlanetDimensions[0]$
 		%CheckResize = #$PlanetDimensions[0]$
 	}
 	@Body:HAS[#CheckResize[>1]]
 	{
-		@PlanetDimensions[11] != 2
+		@PlanetDimensions2[1] != 2
 	}
 	@Body:HAS[#CheckResize[<1]]
 	{
-		@PlanetDimensions[11] *= 0.5
-		@PlanetDimensions[11] += 0.5
+		@PlanetDimensions2[1] *= 0.5
+		@PlanetDimensions2[1] += 0.5
 	}
 	@Body:HAS[#PlanetDimensions[*,*,*,*,*,*,*,1,*,*],~CheckResize[*]]
 	{
-		@PlanetDimensions = #$PlanetDimensions$,$PlanetDimensions[0]$,$PlanetDimensions[0]$
-		@PlanetDimensions[11] != 2
+		// define PlanetDimensions[0] = changeScatterSize
+		// define PlanetDimensions[1] = changeScatterDensity
+		
+		%PlanetDimensions2 = #$PlanetDimensions[0]$,$PlanetDimensions[0]$
+		@PlanetDimensions2[1] != 2
 	}
 	@Body:HAS[#CheckResize[*]]
 	{
 		!CheckResize = DEL
 	}
-	@Body:HAS[#PlanetDimensions[1,*,*,*,*,1,*,*,*,*,*,*]]
+	@Body:HAS[#PlanetDimensions[1,*,*,*,*,1,*,*,*,*]]
 	{
+		// define PlanetDimensions2[2] = needsCache
 		// NEEDS NEW CACHE = FALSE
-		@PlanetDimensions = #$PlanetDimensions$,False
+		
+		@PlanetDimensions2 = #$PlanetDimensions2$,False
 	}
 	@Body:HAS[~PlanetDimensions[*False]]
 	{
+		// define PlanetDimensions2[2] = needsCache
 		// NEEDS NEW CACHE = TRUE
-		@PlanetDimensions = #$PlanetDimensions$,True	
+		
+		@PlanetDimensions2 = #$PlanetDimensions2$,True	
 	}
 }
