switch to PlanetDimensions2

--- a/GameData/Sigma/Dimensions/Configs/ReDimension/resizePQSMods.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/resizePQSMods.cfg
@@ -77,11 +77,11 @@
 					{
 						@Scatter,*
 						{
-							@maxLevelOffset *= #$../../../../../PlanetDimensions[10]$
-							@maxScale *= #$../../../../../PlanetDimensions[10]$
-							@minScale *= #$../../../../../PlanetDimensions[10]$
-							@verticalOffset *= #$../../../../../PlanetDimensions[10]$
-							@densityFactor *= #$../../../../../PlanetDimensions[11]$
+							@maxLevelOffset *= #$../../../../../PlanetDimensions2[0]$
+							@maxScale *= #$../../../../../PlanetDimensions2[0]$
+							@minScale *= #$../../../../../PlanetDimensions2[0]$
+							@verticalOffset *= #$../../../../../PlanetDimensions2[0]$
+							@densityFactor *= #$../../../../../PlanetDimensions2[1]$
 						}
 					}
 				}
