add atmoASL and tempASL

--- a/GameData/Sigma/Dimensions/Configs/ReDimension/atmoScale.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/atmoScale.cfg
@@ -84,6 +84,28 @@
 				!sunAtmo = DEL
 				%transformScale = 0,0,0
 			}
+			
+			// pressure ASL
+			
+			@pressureCurve
+			{
+				@key,* ^= :$: 0 0 0 x:
+				@key,*[1, ] *= #$../../PlanetDimensions[10]$
+				@key,*[2, ] *= #$../../PlanetDimensions[10]$
+				@key,*[3, ] *= #$../../PlanetDimensions[10]$
+				@key,* ^= : 0 0 0 x$: :
+			}
+			
+			// temperature ASL
+			
+			@temperatureCurve
+			{
+				@key,* ^= :$: 0 0 0 x:
+				@key,*[1, ] *= #$../../PlanetDimensions[11]$
+				@key,*[2, ] *= #$../../PlanetDimensions[11]$
+				@key,*[3, ] *= #$../../PlanetDimensions[11]$
+				@key,* ^= : 0 0 0 x$: :
+			}
 		}	
 		@Atmosphere:HAS[~pressureCurveIsNormalized[True]]
 		{
