fix for easy addition of new parameters

--- a/GameData/Sigma/Dimensions/Configs/ReDimension/advancedSettings.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/advancedSettings.cfg
@@ -45,64 +45,11 @@
 
 // Create PlanetDimensions parameter
 
-@SigmaDimensions:HAS[~PlanetDimensions[*]]:AFTER[SigDim]
+@SigmaDimensions:AFTER[SigDim]
 {
-	%PlanetDimensions = #$Resize$,$Rescale$,$Atmosphere$,$dayLengthMultiplier$,$geeASLmultiplier$,$landscape$,$atmoVisualEffect$,$resizeScatter$,$CustomSoISize$,$CustomRingSize$
-}
-@Kopernicus:AFTER[SigDim]
-{
-	@Body:HAS[~PlanetDimensions[*]]
+	@Body,*
 	{
-		%PlanetDimensions = Resize,Rescale,Atmosphere,dayLengthMultiplier,geeASLmultiplier,landscape,atmoVisualEffect,resizeScatter,CustomSoISize,CustomRingSize
-	}
-}
-
-// Set PlanetDimensions for each planet
-
-@Kopernicus:AFTER[SigDim]
-{
-	@Body:HAS[#PlanetDimensions[Resize,*]]
-	{
-		@PlanetDimensions[0] = #$@SigmaDimensions/PlanetDimensions[0]$
-	}
-	@Body:HAS[#PlanetDimensions[*,Rescale,*]]
-	{
-		@PlanetDimensions[1] = #$@SigmaDimensions/PlanetDimensions[1]$
-	}
-	@Body:HAS[#PlanetDimensions[*,Atmosphere,*]]
-	{
-		@PlanetDimensions[2] = #$@SigmaDimensions/PlanetDimensions[2]$
-	}
-	@Body:HAS[#PlanetDimensions[*,dayLengthMultiplier,*]]
-	{
-		@PlanetDimensions[3] = #$@SigmaDimensions/PlanetDimensions[3]$
-	}
-	@Body:HAS[#PlanetDimensions[*,geeASLmultiplier,*]]
-	{
-		@PlanetDimensions[4] = #$@SigmaDimensions/PlanetDimensions[4]$
-	}
-	@Body:HAS[#PlanetDimensions[*,landscape,*]]
-	{
-		@PlanetDimensions[5] = #$@SigmaDimensions/PlanetDimensions[5]$
-	}
-	@Body:HAS[#PlanetDimensions[*,atmoVisualEffect,*]]
-	{
-		@PlanetDimensions[6] = #$@SigmaDimensions/PlanetDimensions[6]$
-	}
-	@Body:HAS[#PlanetDimensions[*,resizeScatter,*]]
-	{
-		@PlanetDimensions[7] = #$@SigmaDimensions/PlanetDimensions[7]$
-	}
-	@Body:HAS[#PlanetDimensions[*,CustomSoISize,*]]
-	{
-		@PlanetDimensions[8] = #$@SigmaDimensions/PlanetDimensions[8]$
-	}
-	@Body:HAS[#PlanetDimensions[*,CustomRingSize]]
-	{
-		@PlanetDimensions[9] = #$@SigmaDimensions/PlanetDimensions[9]$
-	}
-	@Body:HAS[~PlanetMultiplier[*]]
-	{
-		PlanetMultiplier = 1,1,1,1,1,1,1,1,1,1
+		%PlanetDimensions = #$Resize$,$Rescale$,$Atmosphere$,$dayLengthMultiplier$,$geeASLmultiplier$,$landscape$,$atmoVisualEffect$,$resizeScatter$,$CustomSoISize$,$CustomRingSize$,$atmoASL$,$tempASL$
+		%PlanetMultiplier = 1,1,1,1,1,1,1,1,1,1,1,1
 	}
 }
