add atmoASL and tempASL

--- a/GameData/Sigma/Dimensions/Configs/ReDimension/applySettings.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/applySettings.cfg
@@ -4,7 +4,6 @@
 {
 	@Body,*
 	{
-		@PlanetDimensions = #$PlanetDimensions$,1,1,1,1,1,1,1,1,1
 		@PlanetDimensions[0] *= #$PlanetMultiplier[0]$
 		@PlanetDimensions[1] *= #$PlanetMultiplier[1]$
 		@PlanetDimensions[2] *= #$PlanetMultiplier[2]$
@@ -14,6 +13,8 @@
 		@PlanetDimensions[6] *= #$PlanetMultiplier[6]$
 		@PlanetDimensions[8] *= #$PlanetMultiplier[8]$
 		@PlanetDimensions[9] *= #$PlanetMultiplier[9]$
+		@PlanetDimensions[10] *= #$PlanetMultiplier[10]$
+		@PlanetDimensions[11] *= #$PlanetMultiplier[11]$
 	}
 }
 
@@ -21,16 +22,16 @@
 
 @Kopernicus:FOR[SigDim2]
 {
-	@Body:HAS[#PlanetDimensions[*,*,*,*,*,*,*,*,0,*]]
+	@Body:HAS[#PlanetDimensions[*,*,*,*,*,*,*,*,0,*,*,*]]
 	{
 		@PlanetDimensions[8] = #$PlanetDimensions[1]$
 	}
-	@Body:HAS[#PlanetDimensions[*,0]]
+	@Body:HAS[#PlanetDimensions[*,*,*,*,*,*,*,*,*,0,*,*]]
 	{
 		@PlanetDimensions[9] = #$PlanetDimensions[1]$
 		@PlanetDimensions[9] /= #$PlanetDimensions[0]$
 	}
-	@Body:HAS[#PlanetDimensions[*,*,*,*,*,*,*,0,*,*]]
+	@Body:HAS[#PlanetDimensions[*,*,*,*,*,*,*,0,*,*,*,*]]
 	{
 		// define PlanetDimensions[0] = changeScatterSize
 		// define PlanetDimensions[1] = changeScatterDensity
@@ -47,7 +48,7 @@
 		@PlanetDimensions2[1] *= 0.5
 		@PlanetDimensions2[1] += 0.5
 	}
-	@Body:HAS[#PlanetDimensions[*,*,*,*,*,*,*,1,*,*],~CheckResize[*]]
+	@Body:HAS[#PlanetDimensions[*,*,*,*,*,*,*,1,*,*,*,*],~CheckResize[*]]
 	{
 		// define PlanetDimensions[0] = changeScatterSize
 		// define PlanetDimensions[1] = changeScatterDensity
@@ -59,7 +60,7 @@
 	{
 		!CheckResize = DEL
 	}
-	@Body:HAS[#PlanetDimensions[1,*,*,*,*,1,*,*,*,*]]
+	@Body:HAS[#PlanetDimensions[1,*,*,*,*,1,*,*,*,*,*,*]]
 	{
 		// define PlanetDimensions2[2] = needsCache
 		// NEEDS NEW CACHE = FALSE
