add atmoASL and tempASL

--- a/GameData/Sigma/Dimensions/Configs/ReDimension/advancedSettings.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/advancedSettings.cfg
@@ -36,11 +36,19 @@
 }
 @SigmaDimensions:HAS[~CustomSoISize[>0]]:AFTER[SigDim]
 {
-	%CustomSoISize = 0
+	%CustomSoISize = 1
 }
 @SigmaDimensions:HAS[~CustomRingSize[>0]]:AFTER[SigDim]
 {
-	%CustomRingSize = 0
+	%CustomRingSize = 1
+}
+@SigmaDimensions:HAS[~atmoASL[>0]]:AFTER[SigDim]
+{
+	%atmoASL = 1
+}
+@SigmaDimensions:HAS[~tempASL[>0]]:AFTER[SigDim]
+{
+	%tempASL = 1
 }
 
 // Create PlanetDimensions parameter
