--- a/GameData/Sigma/Dimensions/Configs/ReDimension/applySettings.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/applySettings.cfg
@@ -22,6 +22,7 @@
 
 @Kopernicus:FOR[SigDim2]
 {
+	// SCATTER SIZE
 	@Body:HAS[#PlanetDimensions[*,*,*,*,*,*,*,*,0,*,*,*]]
 	{
 		@PlanetDimensions[8] = #$PlanetDimensions[1]$
