--- a/GameData/Sigma/Dimensions/Configs/ReDimension/applySettings.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/applySettings.cfg
@@ -25,17 +25,19 @@
 	// SCATTER SIZE
 	@Body:HAS[#PlanetDimensions[*,*,*,*,*,*,*,*,0,*,*,*]]
 	{
+		// Set SphereOfInfluence multiplier
 		@PlanetDimensions[8] = #$PlanetDimensions[1]$
 	}
 	@Body:HAS[#PlanetDimensions[*,*,*,*,*,*,*,*,*,0,*,*]]
 	{
+		// Set Ring size multiplier
 		@PlanetDimensions[9] = #$PlanetDimensions[1]$
 		@PlanetDimensions[9] /= #$PlanetDimensions[0]$
 	}
 	@Body:HAS[#PlanetDimensions[*,*,*,*,*,*,*,0,*,*,*,*]]
 	{
-		// define PlanetDimensions[0] = changeScatterSize
-		// define PlanetDimensions[1] = changeScatterDensity
+		// define PlanetDimensions2[0] = changeScatterSize
+		// define PlanetDimensions2[1] = changeScatterDensity
 		
 		%PlanetDimensions2 = #1,$PlanetDimensions[0]$
 		%CheckResize = #$PlanetDimensions[0]$
@@ -51,8 +53,8 @@
 	}
 	@Body:HAS[#PlanetDimensions[*,*,*,*,*,*,*,1,*,*,*,*],~CheckResize[*]]
 	{
-		// define PlanetDimensions[0] = changeScatterSize
-		// define PlanetDimensions[1] = changeScatterDensity
+		// define PlanetDimensions2[0] = changeScatterSize
+		// define PlanetDimensions2[1] = changeScatterDensity
 		
 		%PlanetDimensions2 = #$PlanetDimensions[0]$,$PlanetDimensions[0]$
 		@PlanetDimensions2[1] != 2
