--- a/GameData/Sigma/Dimensions/Configs/ReDimension/advancedSettings.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/advancedSettings.cfg
@@ -55,9 +55,14 @@
 
 @SigmaDimensions:AFTER[SigDim]
 {
+	%PlanetDimensions = #$Resize$,$Rescale$,$Atmosphere$,$dayLengthMultiplier$,$geeASLmultiplier$,$landscape$,$atmoVisualEffect$,$resizeScatter$,$CustomSoISize$,$CustomRingSize$,$atmoASL$,$tempASL$
+}
+
+@Kopernicus:AFTER[SigDim]
+{
 	@Body,*
 	{
-		%PlanetDimensions = #$Resize$,$Rescale$,$Atmosphere$,$dayLengthMultiplier$,$geeASLmultiplier$,$landscape$,$atmoVisualEffect$,$resizeScatter$,$CustomSoISize$,$CustomRingSize$,$atmoASL$,$tempASL$
+		%PlanetDimensions = #$@SigmaDimensions/PlanetDimensions$
 		%PlanetMultiplier = 1,1,1,1,1,1,1,1,1,1,1,1
 	}
 }
