--- a/GameData/Sigma/Dimensions/Configs/General/massFix.cfg
+++ b/GameData/Sigma/Dimensions/Configs/General/massFix.cfg
@@ -28,6 +28,18 @@
 			@mass *= 9.81
 		}
 	}
+	
+// This part converts meanAnomalyAtEpochD (deg) to meanAnomalyAtEpoch (rad)
+
+	@Body,*
+	{
+		@Orbit:HAS[#meanAnomalyAtEpochD[*]]
+		{
+			%meanAnomalyAtEpoch = #$meanAnomalyAtEpochD$
+			@meanAnomalyAtEpoch *= 0.0174532925199433
+			!meanAnomalyAtEpochD = DEL
+		}
+	}
 
 // This part defines the values needed
 // It won't overwrite user defined values
