fix case sensitivity fix

--- a/GameData/Sigma/Dimensions/Configs/General/caseSensitivityFix.cfg
+++ b/GameData/Sigma/Dimensions/Configs/General/caseSensitivityFix.cfg
@@ -8,7 +8,7 @@
 		@finalizeOrbit ^= :E:e:
 		@Template
 		{
-			@temperatureCurveIsNormalized ^= :t:T:
+			@removeAllPQSMods ^= :t:T:
 			@removeAllPQSMods ^= :R:r:
 			@removeAllPQSMods ^= :U:u:
 			@removeAllPQSMods ^= :E:e:
