--- a/GameData/Sigma/Dimensions/Configs/ReDimension/groundScatters.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/groundScatters.cfg
@@ -412,19 +412,69 @@
 					{
 						@Scatter:HAS[#name[boulder]]
 						{
+							materialType = DiffuseDetail
+							mesh = BUILTIN/boulder
+							castShadows = True
 							densityFactor = 1
+							maxCache = 512
+							maxCacheDelta = 32
 							maxLevelOffset = 0
 							maxScale = 2
+							maxScatter = 20
+							maxSpeed = 1000
 							minScale = 0.25
+							recieveShadows = False
+							seed = 231123
 							verticalOffset = -0.15
+							delete = False
+							collide = False
+							science = False
+							Material
+							{
+								color = 0.6641791,0.6319441,0.4482048,1
+								mainTex = BUILTIN/distantground
+								mainTexScale = 0.5,0.5
+								mainTexOffset = 0,0
+								detail = BUILTIN/rock00
+								detailScale = 3,3
+								detailOffset = 0,0
+							}
+							Experiment
+							{
+							}
 						}
 						@Scatter:HAS[#name[stalactite]]
 						{
+							materialType = DiffuseDetail
+							mesh = BUILTIN/Cube
+							castShadows = True
 							densityFactor = 1
+							maxCache = 512
+							maxCacheDelta = 32
 							maxLevelOffset = 0
 							maxScale = 4
+							maxScatter = 20
+							maxSpeed = 1000
 							minScale = 0.5
+							recieveShadows = False
+							seed = 23453
 							verticalOffset = 0
+							delete = False
+							collide = False
+							science = False
+							Material
+							{
+								color = 0.6641791,0.6319441,0.4482048,1
+								mainTex = BUILTIN/distantground
+								mainTexScale = 0.5,0.5
+								mainTexOffset = 0,0
+								detail = BUILTIN/rock00
+								detailScale = 3,3
+								detailOffset = 0,0
+							}
+							Experiment
+							{
+							}
 						}
 					}
 				}
