--- a/GameData/Sigma/Dimensions/Configs/ReDimension/resizeClouds.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/resizeClouds.cfg
@@ -6,7 +6,7 @@
 {
 	@OBJECT:HAS[~customResize[>0]]
 	{
-		@deactivateDistance *= #$SigmaDimensions/Resize$
+		@deactivateDistance *= #$@SigmaDimensions/Resize$
 	}
 }
 @PQS_MANAGER:FOR[SigDim2]
