test bigger scale

--- a/GameData/Sigma/Dimensions/Configs/ReDimension/atmoScale.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/atmoScale.cfg
@@ -74,6 +74,7 @@
 			}
 			@AtmosphereFromGround:HAS[~sunAtmo[True]]
 			{
+				@transformScale *= 2
 				@transformScale /= #$../../Properties/radius$
 				@transformScale /= #$../../PlanetDimensions[0]$
 				@transformScale += 1
