--- a/GameData/Sigma/Dimensions/Configs/General/massFix.cfg
+++ b/GameData/Sigma/Dimensions/Configs/General/massFix.cfg
@@ -389,7 +389,7 @@
 			epoch = 0
 		}
 	}
-	@Body:HAS[@Template:HAS[#name[Sun]]]:NEEDS[!GalacticNeighborhood]
+	@Body:HAS[@Template:HAS[#name[Sun]]]
 	{
 		@Properties
 		{
