fix kerbin rotation

--- a/GameData/Sigma/Dimensions/Configs/Bodies/Kerbin.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Kerbin.cfg
@@ -4,7 +4,7 @@
 	{
 		%Properties
 		{
-			rotationPeriod = 21549.4251830898
+			rotationPeriod = 21600
 			inverseRotThresholdAltitude = 100000
 			timewarpAltitudeLimits = 0 30000 30000 60000 120000 240000 480000 600000
 			%ScienceValues
