--- a/GameData/Sigma/Dimensions/Configs/ReDimension/rescaleSCANsat.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/rescaleSCANsat.cfg
@@ -2,29 +2,29 @@
 {
   @MODULE:HAS[#name[ModuleSCANresourceScanner]]
   {
-    @min_alt *= #$@SigmaBinary/Resize$
-    @max_alt *= #$@SigmaBinary/Resize$
-    @best_alt *= #$@SigmaBinary/Resize$
+    @min_alt *= #$@SigmaDimensions/Resize$
+    @max_alt *= #$@SigmaDimensions/Resize$
+    @best_alt *= #$@SigmaDimensions/Resize$
   }
   @MODULE:HAS[#name[SCANsat]]
   {
-    @min_alt *= #$@SigmaBinary/Resize$
-    @max_alt *= #$@SigmaBinary/Resize$
-    @best_alt *= #$@SigmaBinary/Resize$
+    @min_alt *= #$@SigmaDimensions/Resize$
+    @max_alt *= #$@SigmaDimensions/Resize$
+    @best_alt *= #$@SigmaDimensions/Resize$
   }
 }
 @SCAN_Color_Config:FOR[SigDim2]
 {
-	@defaultMinHeightRange *= #$@SigmaBinary/Resize$
-	@defaultMaxHeightRange *= #$@SigmaBinary/Resize$
-	@rangeAboveMaxHeight *= #$@SigmaBinary/Resize$
-	@rangeBelowMinHeight *= #$@SigmaBinary/Resize$
+	@defaultMinHeightRange *= #$@SigmaDimensions/Resize$
+	@defaultMaxHeightRange *= #$@SigmaDimensions/Resize$
+	@rangeAboveMaxHeight *= #$@SigmaDimensions/Resize$
+	@rangeBelowMinHeight *= #$@SigmaDimensions/Resize$
 	@SCANsat_Altimetry,*
 	{
 		@Item,*
 		{
-			@minHeightRange *= #$@SigmaBinary/Resize$
-			@maxHeightRange *= #$@SigmaBinary/Resize$
+			@minHeightRange *= #$@SigmaDimensions/Resize$
+			@maxHeightRange *= #$@SigmaDimensions/Resize$
 		}
 	}
 }
