--- a/GameData/Sigma/Dimensions/Configs/ReDimension/rescaleSCANsat.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/rescaleSCANsat.cfg
@@ -1,17 +1,26 @@
 @PART:FOR[SigDim2]
 {
-  @MODULE:HAS[#name[ModuleSCANresourceScanner]]
-  {
-    @min_alt *= #$@SigmaDimensions/Resize$
-    @max_alt *= #$@SigmaDimensions/Resize$
-    @best_alt *= #$@SigmaDimensions/Resize$
-  }
-  @MODULE:HAS[#name[SCANsat]]
-  {
-    @min_alt *= #$@SigmaDimensions/Resize$
-    @max_alt *= #$@SigmaDimensions/Resize$
-    @best_alt *= #$@SigmaDimensions/Resize$
-  }
+	@MODULE:HAS[#name[ModuleSCANresourceScanner]]
+	{
+		@min_alt *= #$@SigmaDimensions/Resize$
+		@max_alt *= #$@SigmaDimensions/Resize$
+		@best_alt *= #$@SigmaDimensions/Resize$
+	}
+	@MODULE:HAS[#name[SCANsat]]
+	{
+		@min_alt *= #$@SigmaDimensions/Resize$
+		@max_alt *= #$@SigmaDimensions/Resize$
+		@best_alt *= #$@SigmaDimensions/Resize$
+	}
+	@MODULE:HAS[#name[ModuleResourceScanner]]
+	{
+		@MaxAbundanceAltitude *= #$@SigmaDimensions/Resize$
+	}
+	@MODULE:HAS[#name[ModuleOrbitalSurveyor]]
+	{
+		@minThreshold *= #$@SigmaDimensions/Resize$
+		@maxThreshold *= #$@SigmaDimensions/Resize$
+	}
 }
 @SCAN_Color_Config:FOR[SigDim2]
 {
