--- a/GameData/Sigma/Dimensions/Configs/ReDimension/atmoScale.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/atmoScale.cfg
@@ -148,4 +148,16 @@
 			}
 		}
 	}
+	@Body[Kerbin]
+	{
+		@Atmosphere
+		{
+			// ISP fix
+			@pressureCurve
+			{
+				@key,*[0, ] += 0.0001
+				key = 0 101.325
+			}
+		}
+	}
 }
