--- a/GameData/Sigma/Dimensions/Configs/Bodies/AllowUserDefined.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/AllowUserDefined.cfg
@@ -2,6 +2,13 @@
 {
 	@Body,*
 	{
+		@Template
+		{
+			@removeAtmosphere ^= :t:T:
+			@removeAtmosphere ^= :R:r:
+			@removeAtmosphere ^= :U:u:
+			@removeAtmosphere ^= :E:e:
+		}
 		%Properties
 		{
 			inverseRotThresholdAltitude = 100000
