--- a/GameData/Sigma/Dimensions/Configs/Bodies/Duna.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Duna.cfg
@@ -74,28 +74,26 @@
 					atmosphereDepth = 11500
 					SigmaDimensions = 1
 				}
-				%LandControl
+				%LandControl {}
+				@LandControl,*
 				{
 					vHeightMax = 3500
-					SigmaDimensions = 1
-				}
-				@LandControl:HAS[!landClasses]
-				{
-					landClasses {}
-				}
-				@LandControl
-				{
+					%SigmaDimensions = 1
+					%landClasses {}
 					@landClasses:HAS[!Class[Ice?Caps]]
 					{
+						%SigmaDimensions = 1
 						Class
 						{
 							name = Ice Caps
+							%SigmaDimensions = 1
 						}
 					}
 					@landClasses
 					{
 						@Class[Ice?Caps]
 						{
+							%SigmaDimensions = 1
 							alterApparentHeight = 100
 							alterRealHeight = 100
 						}
