--- a/GameData/Sigma/Dimensions/Configs/General/removePQSMods.cfg
+++ b/GameData/Sigma/Dimensions/Configs/General/removePQSMods.cfg
@@ -25,9 +25,10 @@
 				!MapDecalTangent:HAS[#SigmaDimensions[1],~userDefined[1]] {}
 				!MapDecal:HAS[#SigmaDimensions[1],~userDefined[1]] {}
 				!FlattenOcean:HAS[#SigmaDimensions[1],~userDefined[1]] {}
-				@LandControl,*
+				@LandControl:HAS[#SigmaDimensions[1]]
 				{
-					@landClasses,*
+					!landClasses:HAS[#SigmaDimensions[1],~userDefined[1]] {}
+					@landClasses:HAS[#SigmaDimensions[1]]
 					{
 						!Class:HAS[#SigmaDimensions[1],~userDefined[1]] {}
 					}
@@ -80,6 +81,14 @@
 			@Mods
 			{
 				!LandControl:HAS[#SigmaDimensions[1],~userDefined[1]] {}
+				@LandControl:HAS[#SigmaDimensions[1]]
+				{
+					!landClasses:HAS[#SigmaDimensions[1],~userDefined[1]] {}
+					@landClasses:HAS[#SigmaDimensions[1]]
+					{
+						!Class:HAS[#SigmaDimensions[1],~userDefined[1]] {}
+					}
+				}
 			}
 		}
 	}
