--- a/GameData/Sigma/Dimensions/Configs/Bodies/Laythe.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Laythe.cfg
@@ -25,28 +25,18 @@
 			deactivateAltitude = 160000
 			%Mods
 			{
-				%LandControl
+				%LandControl {}
+				@LandControl,*
 				{
 					vHeightMax = 6000
-					SigmaDimensions = 1
-				}
-				@LandControl:HAS[!landClasses]
-				{
-					landClasses {}
-				}
-				@LandControl
-				{
-					@landClasses:HAS[!Class[IceCaps]]
-					{
-						Class
-						{
-							name = IceCaps
-						}
-					}
+					%SigmaDimensions = 1
+					%landClasses {}
 					@landClasses
 					{
-						@Class[IceCaps]
+						%SigmaDimensions = 1
+						%Class[IceCaps]
 						{
+							%SigmaDimensions = 1
 							alterApparentHeight = 100
 							alterRealHeight = 10
 						}
