--- a/GameData/Sigma/Dimensions/Configs/Bodies/Kerbin.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Kerbin.cfg
@@ -44,40 +44,25 @@
 					simplexHeightStart = 0
 					SigmaDimensions = 1
 				}
-				%LandControl
+				%LandControl {}
+				@LandControl,*
 				{
 					vHeightMax = 3500
-					SigmaDimensions = 1
-				}
-				@LandControl:HAS[!landClasses]
-				{
-					landClasses {}
-				}
-				@LandControl
-				{
-					@landClasses:HAS[!Class[DesertMountains]]
-					{
-						Class
-						{
-							name = DesertMountains
-						}
-					}
-					@landClasses:HAS[!Class[IceCaps]]
-					{
-						Class
-						{
-							name = IceCaps
-						}
-					}
+					%SigmaDimensions = 1
+					
+					%landClasses {}
 					@landClasses
 					{
-						@Class[DesertMountains]
+						%SigmaDimensions = 1
+						%Class[DesertMountains]
 						{
+							%SigmaDimensions = 1
 							alterApparentHeight = -0.8
 							alterRealHeight = 0
 						}
-						@Class[IceCaps]
+						%Class[IceCaps]
 						{
+							%SigmaDimensions = 1
 							alterApparentHeight = 100
 							alterRealHeight = 10
 						}
