--- a/GameData/Sigma/Dimensions/Configs/ReDimension/atmoScale.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/atmoScale.cfg
@@ -6,14 +6,14 @@
 		{
 			%AtmosphereFromGround
 			{
-				innerRadiusMult = 0.999375
+				%innerRadiusMult = 0.999375
 			}
 		}
 		@Atmosphere:HAS[!AtmosphereFromGround:HAS[#outerRadius[*]]]
 		{
 			%AtmosphereFromGround
 			{
-				outerRadiusMult = 1.025
+				%outerRadiusMult = 1.025
 			}
 		}
 		@Atmosphere:HAS[#atmosphereDepth[*]]
