--- a/GameData/Sigma/Dimensions/Configs/ReDimension/atmoScale.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/atmoScale.cfg
@@ -6,14 +6,14 @@
 		{
 			%AtmosphereFromGround
 			{
-				%innerRadiusMult = 0.999375
+				innerRadiusMult = 0.975
 			}
 		}
 		@Atmosphere:HAS[!AtmosphereFromGround:HAS[#outerRadius[*]]]
 		{
 			%AtmosphereFromGround
 			{
-				%outerRadiusMult = 1.025
+				outerRadiusMult = 1.025
 			}
 		}
 		@Atmosphere:HAS[#atmosphereDepth[*]]
@@ -37,15 +37,15 @@
 			@altitude *= #$../PlanetDimensions[2]$
 			@atmosphereDepth *= #$../PlanetDimensions[2]$
 			%AtmosphereFromGround {}
-			@AtmosphereFromGround:HAS[~innerRadius[*]]
-			{
-				innerRadius = #$../../Properties/radius$
-				@innerRadius *= #$innerRadiusMult$
-			}
 			@AtmosphereFromGround:HAS[~outerRadius[*]]
 			{
 				outerRadius = #$../../Properties/radius$
 				@outerRadius *= #$outerRadiusMult$
+			}
+			@AtmosphereFromGround:HAS[~innerRadius[*]]
+			{
+				innerRadius = #$outerRadius$
+				@innerRadius *= #$innerRadiusMult$
 			}
 			@AtmosphereFromGround:HAS[~sunAtmo[True]]
 			{
