--- a/GameData/Sigma/Dimensions/Configs/ReDimension/advancedSettings.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/advancedSettings.cfg
@@ -1,7 +1,5 @@
 // Check for missing and invalid variables
 
-%SigmaDimensions {}
-
 @SigmaDimensions:HAS[~Resize[<1],~Resize[>1]]:AFTER[SigDim]
 {
 	%Resize = 1
@@ -49,6 +47,10 @@
 @SigmaDimensions:HAS[~tempASL[>0]]:AFTER[SigDim]
 {
 	%tempASL = 1
+}
+@SigmaDimensions:HAS[~reEntryHeat[>0]]:AFTER[SigDim]
+{
+	%reEntryHeat = 1
 }
 
 // Create PlanetDimensions parameter
