--- a/GameData/Sigma/Dimensions/Configs/ReDimension/physicsModifier.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/physicsModifier.cfg
@@ -1,8 +1,8 @@
 @SigmaDimensions:FOR[SigDim2]
 {
   %heatMulti = #$Resize$
-  heatMulti != #$@PHYSICSGLOBALS/machTemperatureVelocityExponent$
-  heatMulti != -0.5
+  @heatMulti != #$@PHYSICSGLOBALS/machTemperatureVelocityExponent$
+  @heatMulti != -0.5
   @reEntryHeat *= #$heatMulti$
   !heatMulti = DEL
 }
