--- a/GameData/Sigma/Dimensions/Configs/ReDimension/rescaleAntennas.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/rescaleAntennas.cfg
@@ -1,17 +1,10 @@
-@PART:FOR[SigDim2]
+RemoteTechSettings:NEEDS[RemoteTech]
 {
-	@MODULE[ModuleRTAntenna]
-	{
-		@Mode0OmniRange *= #$@SigmaDimensions/Rescale$
-		@Mode1OmniRange *= #$@SigmaDimensions/Rescale$
-		@Mode0DishRange *= #$@SigmaDimensions/Rescale$
-		@Mode1DishRange *= #$@SigmaDimensions/Rescale$
-	}
-	@MODULE[ModuleDataTransmitter]
-	{
-		@nominalRange *= #$@SigmaDimensions/Rescale$
-		@simpleRange *= #$@SigmaDimensions/Rescale$
-	}
+	name = SigmaDimensions
+}
+@RemoteTechSettings:FOR[SigDim2]
+{
+	%RangeMultiplier = #$@SigmaDimensions/Rescale$
 }
 TRACKING_STATION_RANGES:FOR[SigDim2]
 {
