--- a/GameData/Sigma/Dimensions/Configs/ReDimension/rescaleAntennas.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/rescaleAntennas.cfg
@@ -1,3 +1,5 @@
+// RemoteTech
+
 RemoteTechSettings:NEEDS[RemoteTech]
 {
 	name = SigmaDimensions
@@ -6,6 +8,10 @@ RemoteTechSettings:NEEDS[RemoteTech]
 {
 	%RangeMultiplier = #$@SigmaDimensions/Rescale$
 }
+
+
+// AntennaRange
+
 TRACKING_STATION_RANGES:FOR[SigDim2]
 {
 	@range,* *= #$@SigmaDimensions/Rescale$
