--- a/GameData/Sigma/Dimensions/Configs/ReDimension/atmoScale.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/atmoScale.cfg
@@ -2,16 +2,16 @@
 {
 	@Body,*
 	{
-		@Atmosphere:HAS[!AtmosphereFromGround:HAS[#innerRadius[*]]]
+		@Atmosphere:HAS[@AtmosphereFromGround:HAS[~innerRadius[*]]]
 		{
-			%AtmosphereFromGround
+			@AtmosphereFromGround
 			{
 				innerRadiusMult = 0.975
 			}
 		}
-		@Atmosphere:HAS[!AtmosphereFromGround:HAS[#outerRadius[*]]]
+		@Atmosphere:HAS[@AtmosphereFromGround:HAS[~outerRadius[*]]]
 		{
-			%AtmosphereFromGround
+			@AtmosphereFromGround
 			{
 				outerRadiusMult = 1.025
 			}
@@ -36,7 +36,6 @@
 			@maxAltitude *= #$../PlanetDimensions[2]$
 			@altitude *= #$../PlanetDimensions[2]$
 			@atmosphereDepth *= #$../PlanetDimensions[2]$
-			%AtmosphereFromGround {}
 			@AtmosphereFromGround:HAS[~outerRadius[*]]
 			{
 				outerRadius = #$../../Properties/radius$
