--- a/GameData/Sigma/Dimensions/Configs/ReDimension/setDimensions.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/setDimensions.cfg
@@ -8,6 +8,13 @@
 			@inverseRotThresholdAltitude *= #$../PlanetDimensions[2]$
 		}
 	}
+	@Body:HAS[@Atmosphere:HAS[#maxAltitude[>0]]
+	{
+		@Properties
+		{
+			@inverseRotThresholdAltitude *= #$../Atmosphere/maxAltitude$
+		}
+	}
 	@Body:HAS[!Atmosphere]
 	{
 		@Properties
