atmo and rescale fixes

--- a/GameData/Sigma/Dimensions/Configs/Bodies/Kerbin_atmo.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Kerbin_atmo.cfg
@@ -13,6 +13,11 @@
 			%temperatureCurve {}
 			%temperatureSunMultCurve {}
 			
+			%AtmosphereFromGround
+			{
+				&innerRadiusMult = 0.975
+				&outerRadiusMult = 1.025
+			}
 			@pressureCurve:HAS[~key[*]]
 			{
 				key = 0 101.325 0 -0.01501631
