--- a/GameData/Sigma/Dimensions/Configs/ReDimension/rescaleSCANsat.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/rescaleSCANsat.cfg
@@ -1,39 +1,43 @@
+@SigmaDimensions:FOR[SigDim2]
+{
+	@scanAltitude *= #$@SigmaDimensions/Resize$
+}
 @PART:FOR[SigDim2]
 {
 	@MODULE:HAS[#name[ModuleSCANresourceScanner]]
 	{
-		@min_alt *= #$@SigmaDimensions/Resize$
-		@max_alt *= #$@SigmaDimensions/Resize$
-		@best_alt *= #$@SigmaDimensions/Resize$
+		@min_alt *= #$@SigmaDimensions/scanAltitude$
+		@max_alt *= #$@SigmaDimensions/scanAltitude$
+		@best_alt *= #$@SigmaDimensions/scanAltitude$
 	}
 	@MODULE:HAS[#name[SCANsat]]
 	{
-		@min_alt *= #$@SigmaDimensions/Resize$
-		@max_alt *= #$@SigmaDimensions/Resize$
-		@best_alt *= #$@SigmaDimensions/Resize$
+		@min_alt *= #$@SigmaDimensions/scanAltitude$
+		@max_alt *= #$@SigmaDimensions/scanAltitude$
+		@best_alt *= #$@SigmaDimensions/scanAltitude$
 	}
 	@MODULE:HAS[#name[ModuleResourceScanner]]
 	{
-		@MaxAbundanceAltitude *= #$@SigmaDimensions/Resize$
+		@MaxAbundanceAltitude *= #$@SigmaDimensions/scanAltitude$
 	}
 	@MODULE:HAS[#name[ModuleOrbitalSurveyor]]
 	{
-		@minThreshold *= #$@SigmaDimensions/Resize$
-		@maxThreshold *= #$@SigmaDimensions/Resize$
+		@minThreshold *= #$@SigmaDimensions/scanAltitude$
+		@maxThreshold *= #$@SigmaDimensions/scanAltitude$
 	}
 }
 @SCAN_Color_Config:FOR[SigDim2]
 {
-	@defaultMinHeightRange *= #$@SigmaDimensions/Resize$
-	@defaultMaxHeightRange *= #$@SigmaDimensions/Resize$
-	@rangeAboveMaxHeight *= #$@SigmaDimensions/Resize$
-	@rangeBelowMinHeight *= #$@SigmaDimensions/Resize$
+	@defaultMinHeightRange *= #$@SigmaDimensions/scanAltitude$
+	@defaultMaxHeightRange *= #$@SigmaDimensions/scanAltitude$
+	@rangeAboveMaxHeight *= #$@SigmaDimensions/scanAltitude$
+	@rangeBelowMinHeight *= #$@SigmaDimensions/scanAltitude$
 	@SCANsat_Altimetry,*
 	{
 		@Item,*
 		{
-			@minHeightRange *= #$@SigmaDimensions/Resize$
-			@maxHeightRange *= #$@SigmaDimensions/Resize$
+			@minHeightRange *= #$@SigmaDimensions/scanAltitude$
+			@maxHeightRange *= #$@SigmaDimensions/scanAltitude$
 		}
 	}
 }
