--- a/GameData/Sigma/Dimensions/Configs/Bodies/Jool_atmo.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Jool_atmo.cfg
@@ -13,6 +13,11 @@
 			%temperatureCurve {}
 			%temperatureSunMultCurve {}
 			
+			%AtmosphereFromGround
+			{
+				&innerRadiusMult = 0.975
+				&outerRadiusMult = 1.025
+			}
 			@pressureCurve:HAS[~key[*]]
 			{
 				key = 0 1519.875 0 -0.05753474
