--- a/GameData/Sigma/Dimensions/Configs/ReDimension/advancedSettings.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/advancedSettings.cfg
@@ -52,6 +52,10 @@
 {
 	%reEntryHeat = 1
 }
+@SigmaDimensions:HAS[~scanAltitude[>0]]:AFTER[SigDim]
+{
+	%scanAltitude = 1
+}
 
 // Create PlanetDimensions parameter
 
