--- a/GameData/Sigma/Dimensions/Configs/ReDimension/setAsteroids.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/setAsteroids.cfg
@@ -8,8 +8,22 @@
 			{
 				@Body,*
 				{
-					@minAltitude *= #$@SigmaDimensions/Rescale$
-					@maxAltitude *= #$@SigmaDimensions/Rescale$
+					@semiMajorAxis,*
+					{
+						@minValue,* *= #$@SigmaDimensions/Rescale$
+						@maxValue,* *= #$@SigmaDimensions/Rescale$
+					}
+				}
+			}
+			@Nearby,*
+			{
+				@Body,*
+				{
+					@semiMajorAxis,*
+					{
+						@minValue,* *= #$@SigmaDimensions/Rescale$
+						@maxValue,* *= #$@SigmaDimensions/Rescale$
+					}
 				}
 			}
 		}
