--- a/GameData/Sigma/Dimensions/Configs/ReDimension/atmoScale.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/atmoScale.cfg
@@ -32,7 +32,7 @@
 				innerRadius = #$outerRadius$
 				@innerRadius *= #$innerRadiusMult$
 			}
-			@AtmosphereFromGround:HAS[~sunAtmo[True]]
+			@AtmosphereFromGround
 			{
 				// inner radius
 				@innerRadius -= #$../../Properties/radius$
@@ -57,18 +57,13 @@
 			{
 				@transformScale = 6000
 			}
-			@AtmosphereFromGround:HAS[~sunAtmo[True]]
+			@AtmosphereFromGround
 			{
 				@transformScale *= 2
 				@transformScale /= #$../../Properties/radius$
 				@transformScale /= #$../../PlanetDimensions[0]$
 				@transformScale += 1
 				@transformScale = #$transformScale$,$transformScale$,$transformScale$
-			}
-			@AtmosphereFromGround:HAS[#sunAtmo[True]]
-			{
-				!sunAtmo = DEL
-				%transformScale = 0,0,0
 			}
 			
 			// pressure ASL
