--- a/GameData/Sigma/Dimensions/Configs/ReDimension/setDimensions.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/setDimensions.cfg
@@ -12,7 +12,7 @@
 	{
 		@Properties
 		{
-			@inverseRotThresholdAltitude = #$../Atmosphere/maxAltitude$
+			@inverseRotThresholdAltitude = #$../Atmosphere:HAS[#maxAltitude[>0]]/maxAltitude$
 		}
 	}
 	@Body:HAS[!Atmosphere]
