--- a/GameData/Sigma/Dimensions/Configs/ReDimension/atmoScale.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/atmoScale.cfg
@@ -32,7 +32,11 @@
 				innerRadius = #$outerRadius$
 				@innerRadius *= #$innerRadiusMult$
 			}
-			@AtmosphereFromGround
+			@AtmosphereFromGround:HAS[#transformScale[0,0,0]]
+			{
+				%removeAFG = True
+			}
+			@AtmosphereFromGround:HAS[~removeAFG[True]]
 			{
 				// inner radius
 				@innerRadius -= #$../../Properties/radius$
@@ -46,24 +50,29 @@
 				@outerRadius -= #$../../Properties/radius$
 				@outerRadius *= #$../../PlanetDimensions[2]$
 				@outerRadius *= #$../../PlanetDimensions[6]$
-				%transformScale = #$outerRadius$
+				&transformScale = #$outerRadius$
 				@outerRadius /= #$../../PlanetDimensions[0]$
 				@outerRadius += #$../../Properties/radius$
 				@outerRadius *= #$../../PlanetDimensions[0]$
 				!innerRadiusMult,* = DEL
 				!outerRadiusMult,* = DEL
 			}
-			@AtmosphereFromGround:HAS[#transformScale[<6000]]
+			@AtmosphereFromGround:HAS[~removeAFG[True],#transformScale[<6000]]
 			{
 				@transformScale = 6000
 			}
-			@AtmosphereFromGround
+			@AtmosphereFromGround:HAS[~removeAFG[True]]
 			{
 				@transformScale *= 2
 				@transformScale /= #$../../Properties/radius$
 				@transformScale /= #$../../PlanetDimensions[0]$
 				@transformScale += 1
 				@transformScale = #$transformScale$,$transformScale$,$transformScale$
+			}
+			@AtmosphereFromGround:HAS[#removeAFG[True]]
+			{
+				%transformScale = 0,0,0
+				!removeAFG = DEL
 			}
 			
 			// pressure ASL
