--- a/GameData/Sigma/Dimensions/Configs/ReDimension/atmoScale.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/atmoScale.cfg
@@ -50,7 +50,7 @@
 				@outerRadius -= #$../../Properties/radius$
 				@outerRadius *= #$../../PlanetDimensions[2]$
 				@outerRadius *= #$../../PlanetDimensions[6]$
-				&transformScale = #$outerRadius$
+				%transformScale = #$outerRadius$
 				@outerRadius /= #$../../PlanetDimensions[0]$
 				@outerRadius += #$../../Properties/radius$
 				@outerRadius *= #$../../PlanetDimensions[0]$
