remove spaces and tabulations from transformScale

--- a/GameData/Sigma/Dimensions/Configs/ReDimension/atmoScale.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/atmoScale.cfg
@@ -32,6 +32,11 @@
 				innerRadius = #$outerRadius$
 				@innerRadius *= #$innerRadiusMult$
 			}
+			@AtmosphereFromGround:HAS[#transformScale[*]]
+			{
+				@transformScale ^= : ::
+				@transformScale ^= :	::
+			}
 			@AtmosphereFromGround:HAS[#transformScale[0,0,0]]
 			{
 				%removeAFG = True
